<resources>
    <string name="app_name">glass.io</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Glass.io</string>
    <string name="nav_header_subtitle">By: Crown Coders</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="whatsHot">What\'s Hot</string>
    <string name="topSells">Top Sellers</string>
    <string name="cbTest">Colorblind Test</string>
    <string name="wishList">Wish List</string>
    <string name="extra">Extras</string>
    <string name="credits">Credits</string>
    <string name="credits_body">Image Sources:\n\n
        https://www.flickr.com\n\n
        https://pixabay.com\n\n
        https://commons.wikimedia.org\n\n
        https://svgsilh.com\n\n
        https://www.maxpixels.net/Optician-Eyesight-Spectacles-Vision-Eyeglasses-3356460\n\n
        https://pxhere.com\n\n

        Workload:\n\n
        Launcher icon and splash screen: Designed and completed by Yonis\n\n
        JavaBean and ListView: Yonis\n\n
        Wishlist and handler to add items to wishlist: Yonis\n\n
        Landscape formatting: Yonis\n\n
        Naming and randomizing glasses: Saad\n\n
        RecyclerView and adapter: Saad\n\n
        ViewPager and adapter: Saad\n\n
        Sourcing Images: Saad\n\n

        Full Links to Images:\n\n
        https://pixabay.com/illustrations/glasses-eyes-vision-optical-4473774/\n\n
        https://commons.wikimedia.org/wiki/File:Reading-Glasses.jpg\n\n
        https://svgsilh.com/image/34011.html\n\nhttps://www.maxpixels.net/Optician-Eyesight-Spectacles-Vision-Eyeglasses-3356460\n\n
        https://pixabay.com/fr/vectors/lunettes-de-soleil-black-glasses-4091423/\n\n
        https://pixabay.com/fr/illustrations/lunettes-yeux-vision-optique-4473774/\n\n
        https://pxhere.com/es/photo/1386735\nhttps://pixabay.com/fr/vectors/lunettes-de-soleil-shades-lunettes-145359/\n\n
        https://pixabay.com/no/vectors/solbriller-cool-sol-sommer-beach-310815/
        </string>

    <string name="sort_button_up">Ascending</string>
    <string name="sort_button_down">Descending</string>
    <string name="cant_see_it">I can\'t see it</string>

    <string name="action_colorB">Color Blind Test</string>
    <string name="action_currency">Currency Conversion</string>

    <string name="top_sellers">Best Selling</string>

    <string name="cb_advice_title">Uh-Oh</string>
    <string name="cb_advice_body">Colorblindness is a rare condition, you can get color corrective/filtering lenses to help mitigate this issue.
        \n\nUnfortunately we don\'t sell EnChroma glasses or lenses.\n\nYou can learn more by visiting their website.</string>
    <string name="cb_advice_link">Click here to visit EnChroma website</string>
    <string name="add_to_list">Add to List</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Call Us</string>
    <string name="location">Location</string>
    <string name="email">Email Us</string>
    <string name="twitter">Visit Our Twitter</string>


</resources>
