<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/whatsHot" />
        <item
            android:id="@+id/nav_topSells"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/top_sellers" />
        <item
            android:id="@+id/nav_suggestions"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/cbTest" />
        <item
            android:id="@+id/nav_shoppingCart"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/wishList" />
    </group>

    <item android:title="@string/extra">
        <menu>
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/credits" />
        </menu>
    </item>

</menu>
