<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cbAdvice">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/cbAdvice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textSize="@dimen/main_title"
        android:text="@string/cb_advice_title" />

    <TextView
        android:id="@+id/cbAdvice_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/item_descriptors"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cb_advice_body" />

    <Button
        android:id="@+id/cbAdvice_link"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/cb_advice_link" />

</LinearLayout>